--- a/app/html/wohnheime-und-pflegeheime.html
+++ b/app/html/wohnheime-und-pflegeheime.html
@@ -49,12 +49,12 @@
               <div class=" et_pb_row et_pb_row_1">
                 <div class="et_pb_column et_pb_column_1_2 et_pb_column_2">
                   <div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_text_1">
-                    <p>Mit uControl wird die unter dem Label „<a href="/heizungssteuerung/smart-home/">Smart Home</a>“ bekannte Haustechnik endlich auch für Wohnheime interessant. Die Multi-Gateway-Technologie erlaubt die Regelung sämtlicher Heizkörper eines Gebäudes mit einer komfortablen Online-Steuerung über PC, Tablet-PC oder auch Smartphone-App – für eine beliebig große Anzahl von Räumen.</p>
+                    <p>Mit uControl wird die unter dem Label „<a href="smarthome.html">Smart Home</a>“ bekannte Haustechnik endlich auch für Wohnheime interessant. Die Multi-Gateway-Technologie erlaubt die Regelung sämtlicher Heizkörper eines Gebäudes mit einer komfortablen Online-Steuerung über PC, Tablet-PC oder auch Smartphone-App – für eine beliebig große Anzahl von Räumen.</p>
                   </div>
                 </div>
                 <div class="et_pb_column et_pb_column_1_2 et_pb_column_3">
                   <div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_text_2">
-                    <p>Die <a href="/heizungssteuerung/installation/">Einführung</a> oder <a href="/unternehmen/nachrichten/">Nachrüstung</a> der Lösung gestaltet sich extrem einfach. Zudem ist sie flexibel erweiterbar und amortisiert sich binnen ein bis zwei Jahren.</p>
+                    <p>Die <a href="installation.html">Einführung</a> oder <a href="nachrichten.html">Nachrüstung</a> der Lösung gestaltet sich extrem einfach. Zudem ist sie flexibel erweiterbar und amortisiert sich binnen ein bis zwei Jahren.</p>
                   </div>
                 </div>
               </div>
@@ -416,5 +416,5 @@ id="ninja_forms_field_12_2" name="ninja_forms_field_12" type="radio" class="ninj
           </div>
         </article>
       </div>
-      
+
     <!-- @@include /footer.html -->
