--- a/installation.html
+++ b/installation.html
@@ -553,10 +553,10 @@
               <a href="energysaving.html">Сэкономить на отоплении</a>
             </li>
             <li>
-              <a href="#">Правильно отопление</a>
+              <a href="richtig-heizen.html">Правильно отопление</a>
             </li>
             <li>
-              <a href="#">Интеллектуальное отопление</a>
+              <a href="intelligente-heizungssteuerung.html">Интеллектуальное отопление</a>
             </li>
           </ul>
         </div>
@@ -589,19 +589,19 @@
     <div class="container">
       <ul id="menu-satelitennavigaton" class="bottom-nav">
         <li>
-          <a href="#">Контакты</a>
+          <a href="kontakt.html">Контакты</a>
         </li>
         <li>
-          <a href="#">Данные</a>
+          <a href="impressum.html">Данные</a>
         </li>
         <li>
-          <a href="#">Защита данных</a>
+          <a href="datenschutz.html">Защита данных</a>
         </li>
         <li>
-          <a href="#">Демо</a>
+          <a href="formpage-live-demo.html">Демо</a>
         </li>
         <li>
-          <a href="#">Магазин</a>
+          <a href="http://shop.ucontrol.de/">Магазин</a>
         </li>
       </ul>
     </div>
