--- a/richtig-heizen.html
+++ b/richtig-heizen.html
@@ -216,7 +216,7 @@ id="ie8" lang="de-DE"> <![endif]-->
                         </div>
                         <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_0 et_pb_no_bg">
                           <div class="et_pb_promo_description"></div>
-                          <a class="et_pb_promo_button et_pb_button" href="/formpage.htm">Fordern Sie noch heute Ihr individuelles Angebot an!</a>
+                          <a class="et_pb_promo_button et_pb_button" href="formpage.html">Fordern Sie noch heute Ihr individuelles Angebot an!</a>
                         </div>
                       </div>
                     </div>
@@ -249,7 +249,7 @@ id="ie8" lang="de-DE"> <![endif]-->
                       <div class="et_pb_column et_pb_column_1_2 et_pb_column_5">
                         <div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_text_3">
                           <h2>So viel wie nötig – so wenig wie möglich</h2>
-                          <p>Für jede Art von Gebäude gibt es mit Blick auf den Wärmebedarf eine Reihe verschiedener Nutzerprofile. Dass man dieser Vielfalt mit einer herkömmlichen Regelung nicht gerecht werden kann, versteht sich von selbst – gerade bei großen Gebäuden wie <a href="/einsatzgebiete-heizungssteuerung/hotel-smart-home/">Hotels</a>, <a href="/einsatzgebiete-heizungssteuerung/wohnheime-und-pflegeheime/">Wohn- und Pflegeheimen</a>, <a href="/einsatzgebiete-heizungssteuerung/energiesparen-buero/">Büro- und Veraltungsgebäuden</a> oder <a href="/einsatzgebiete-heizungssteuerung/kommunales-energiemanagement/">kommunalen Liegenschaften</a>.</p>
+                          <p>Für jede Art von Gebäude gibt es mit Blick auf den Wärmebedarf eine Reihe verschiedener Nutzerprofile. Dass man dieser Vielfalt mit einer herkömmlichen Regelung nicht gerecht werden kann, versteht sich von selbst – gerade bei großen Gebäuden wie <a href="hotel-smart-home.html">Hotels</a>, <a href="wohnheime-und-pflegeheime.html">Wohn- und Pflegeheimen</a>, <a href="energysaving.html">Büro- und Veraltungsgebäuden</a> oder <a href="kommunales-energiemanagement.html">kommunalen Liegenschaften</a>.</p>
                           <p>Mit uControl können Sie all diesen Faktoren Rechnung tragen und die Heizung punktgenau an die jeweiligen Anforderungen anpassen. Die über Funk anzusteuernden Heizkörperthermostate regeln die Heizung auf exakt die Temperatur, die Sie vorgeben. Darüber hinaus reagieren die Thermostate automatisch auf Änderungen der Raumtemperatur, beispielsweise durch Lüften.</p>
                         </div>
                         <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_2 et_pb_no_bg">
@@ -458,10 +458,10 @@ id="ie8" lang="de-DE"> <![endif]-->
               <a href="energysaving.html">Сэкономить на отоплении</a>
             </li>
             <li>
-              <a href="#">Правильно отопление</a>
+              <a href="richtig-heizen.html">Правильно отопление</a>
             </li>
             <li>
-              <a href="#">Интеллектуальное отопление</a>
+              <a href="intelligente-heizungssteuerung.html">Интеллектуальное отопление</a>
             </li>
           </ul>
         </div>
@@ -494,19 +494,19 @@ id="ie8" lang="de-DE"> <![endif]-->
     <div class="container">
       <ul id="menu-satelitennavigaton" class="bottom-nav">
         <li>
-          <a href="#">Контакты</a>
+          <a href="kontakt.html">Контакты</a>
         </li>
         <li>
-          <a href="#">Данные</a>
+          <a href="impressum.html">Данные</a>
         </li>
         <li>
-          <a href="#">Защита данных</a>
+          <a href="datenschutz.html">Защита данных</a>
         </li>
         <li>
-          <a href="#">Демо</a>
+          <a href="formpage-live-demo.html">Демо</a>
         </li>
         <li>
-          <a href="#">Магазин</a>
+          <a href="http://shop.ucontrol.de/">Магазин</a>
         </li>
       </ul>
     </div>
