--- a/app/html/areas-of-application.html
+++ b/app/html/areas-of-application.html
@@ -47,7 +47,7 @@
                           </div>
                           <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_center  et_pb_cta_0 et_pb_no_bg">
                             <div class="et_pb_promo_description"></div>
-                            <a class="et_pb_promo_button et_pb_button" href="#">Узнать больше об управлении обогревом</a>
+                            <a class="et_pb_promo_button et_pb_button" href="heatingcontrol.html">Узнать больше об управлении обогревом</a>
                           </div>
                         </div>
                         <div class="et_pb_column et_pb_column_1_4 et_pb_column_empty et_pb_column_2"></div>
@@ -59,12 +59,12 @@
                           <div class="et_pb_blurb et_pb_module et_pb_bg_layout_light et_pb_text_align_center IconLinkText et_pb_blurb_0 et_pb_blurb_position_top">
                             <div class="et_pb_blurb_content">
                               <div class="et_pb_main_blurb_image">
-                                <a href="#">
+                                <a href="energysaving.html">
                                   <img src="img/einsatzgebiet-gewerbe.png" alt="Funktionsweise uControl" class="et-waypoint et_pb_animation_top et-animated">
                                 </a>
                               </div>
                               <div class="et_pb_blurb_container">
-                                <p><a href="#">Административно - офисные здания</a></p>
+                                <p><a href="energysaving.html">Административно - офисные здания</a></p>
                               </div>
                             </div>
                           </div>
@@ -73,12 +73,12 @@
                           <div class="et_pb_blurb et_pb_module et_pb_bg_layout_light et_pb_text_align_center IconLinkText et_pb_blurb_1 et_pb_blurb_position_top">
                             <div class="et_pb_blurb_content">
                               <div class="et_pb_main_blurb_image">
-                                <a href="#">
+                                <a href="hotel-smart-home.html">
                                   <img src="img/heizungssteuerung-im-hotel1.png" alt="uControl an Ihrer Heizung nachrüsten" class="et-waypoint et_pb_animation_top et-animated">
                                 </a>
                               </div>
                               <div class="et_pb_blurb_container">
-                                <p><a href="#">Отели</a></p>
+                                <p><a href="hotel-smart-home.html">Отели</a></p>
                               </div>
                             </div>
                           </div>
@@ -87,12 +87,12 @@
                           <div class="et_pb_blurb et_pb_module et_pb_bg_layout_light et_pb_text_align_center IconLinkText et_pb_blurb_2 et_pb_blurb_position_top">
                             <div class="et_pb_blurb_content">
                               <div class="et_pb_main_blurb_image">
-                                <a href="#">
+                                <a href="wohnheime-und-pflegeheime.html">
                                   <img src="img/einsatzgebiet-hotel.png" alt="Heizungssteuerung im Hotel" class="et-waypoint et_pb_animation_top et-animated">
                                 </a>
                               </div>
                               <div class="et_pb_blurb_container">
-                                <p><a href="#">Общежития и дома престарелых</a></p>
+                                <p><a href="wohnheime-und-pflegeheime.html">Общежития и дома престарелых</a></p>
                               </div>
                             </div>
                           </div>
@@ -101,12 +101,12 @@
                           <div class="et_pb_blurb et_pb_module et_pb_bg_layout_light et_pb_text_align_center IconLinkText et_pb_blurb_3 et_pb_blurb_position_top">
                             <div class="et_pb_blurb_content">
                               <div class="et_pb_main_blurb_image">
-                                <a href="#">
+                                <a href="kommunales-energiemanagement.html">
                                   <img src="img/einsatzgebiet-kommune.png" alt="uControl im Unternehmen" class="et-waypoint et_pb_animation_top et-animated">
                                 </a>
                               </div>
                               <div class="et_pb_blurb_container">
-                                <p><a href="#">ТСЖ</a></p>
+                                <p><a href="kommunales-energiemanagement.html">ТСЖ</a></p>
                               </div>
                             </div>
                           </div>
