--- a/app/html/devicehardware.html
+++ b/app/html/devicehardware.html
@@ -67,7 +67,7 @@
                           </div>
                           <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_1 et_pb_no_bg">
                             <div class="et_pb_promo_description"></div>
-                            <a class="et_pb_promo_button et_pb_button" href="#">Область применения управления обогревом</a>
+                            <a class="et_pb_promo_button et_pb_button" href="areas-of-application.html">Область применения управления обогревом</a>
                           </div>
                         </div>
                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_3">
@@ -93,7 +93,7 @@
                           </div>
                           <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_2 et_pb_no_bg">
                             <div class="et_pb_promo_description"></div>
-                            <a class="et_pb_promo_button et_pb_button" href="#"> Больше информации о модернизации</a>
+                            <a class="et_pb_promo_button et_pb_button" href="upgrade.html"> Больше информации о модернизации</a>
                           </div>
                         </div>
                       </div>
@@ -109,7 +109,7 @@
                           </div>
                           <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_3 et_pb_no_bg">
                             <div class="et_pb_promo_description"></div>
-                            <a class="et_pb_promo_button et_pb_button" href="#"> Больше информации об установке</a>
+                            <a class="et_pb_promo_button et_pb_button" href="installation.html"> Больше информации об установке</a>
                           </div>
                         </div>
                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_7">
