--- a/app/html/energiemanagement.html
+++ b/app/html/energiemanagement.html
@@ -65,7 +65,7 @@
                           </div>
                           <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_0 et_pb_no_bg">
                             <div class="et_pb_promo_description"></div>
-                            <a class="et_pb_promo_button et_pb_button" href="#">Подробнее об экономии энергии</a>
+                            <a class="et_pb_promo_button et_pb_button" href="energie-sparen.html">Подробнее об экономии энергии</a>
                           </div>
                         </div>
                       </div>
