--- a/app/html/roomthermostat.html
+++ b/app/html/roomthermostat.html
@@ -127,7 +127,7 @@
                           </div>
                           <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_1 et_pb_no_bg">
                             <div class="et_pb_promo_description"></div>
-                            <a class="et_pb_promo_button et_pb_button" href="#">К принципу работы</a>
+                            <a class="et_pb_promo_button et_pb_button" href="operation.html">К принципу работы</a>
                           </div>
                         </div>
                       </div>
