--- a/app/html/upgrade.html
+++ b/app/html/upgrade.html
@@ -96,7 +96,7 @@
                           </div>
                           <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_1 et_pb_no_bg">
                             <div class="et_pb_promo_description"></div>
-                            <a class="et_pb_promo_button et_pb_button" href="#">Подробная информация о внедрении</a>
+                            <a class="et_pb_promo_button et_pb_button" href="installation.html">Подробная информация о внедрении</a>
                           </div>
                         </div>
                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_5">
@@ -234,7 +234,7 @@
                           </div>
                           <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_3 et_pb_no_bg">
                             <div class="et_pb_promo_description"></div>
-                            <a class="et_pb_promo_button et_pb_button" href="#">К областям применения</a>
+                            <a class="et_pb_promo_button et_pb_button" href="areas-of-application.html">К областям применения</a>
                           </div>
                         </div>
                       </div>
