--- a/devicehardware.html
+++ b/devicehardware.html
@@ -236,7 +236,7 @@
                           </div>
                           <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_1 et_pb_no_bg">
                             <div class="et_pb_promo_description"></div>
-                            <a class="et_pb_promo_button et_pb_button" href="#">Область применения управления обогревом</a>
+                            <a class="et_pb_promo_button et_pb_button" href="areas-of-application.html">Область применения управления обогревом</a>
                           </div>
                         </div>
                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_3">
@@ -262,7 +262,7 @@
                           </div>
                           <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_2 et_pb_no_bg">
                             <div class="et_pb_promo_description"></div>
-                            <a class="et_pb_promo_button et_pb_button" href="#"> Больше информации о модернизации</a>
+                            <a class="et_pb_promo_button et_pb_button" href="upgrade.html"> Больше информации о модернизации</a>
                           </div>
                         </div>
                       </div>
@@ -278,7 +278,7 @@
                           </div>
                           <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_3 et_pb_no_bg">
                             <div class="et_pb_promo_description"></div>
-                            <a class="et_pb_promo_button et_pb_button" href="#"> Больше информации об установке</a>
+                            <a class="et_pb_promo_button et_pb_button" href="installation.html"> Больше информации об установке</a>
                           </div>
                         </div>
                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_7">
@@ -513,10 +513,10 @@
               <a href="energysaving.html">Сэкономить на отоплении</a>
             </li>
             <li>
-              <a href="#">Правильно отопление</a>
+              <a href="richtig-heizen.html">Правильно отопление</a>
             </li>
             <li>
-              <a href="#">Интеллектуальное отопление</a>
+              <a href="intelligente-heizungssteuerung.html">Интеллектуальное отопление</a>
             </li>
           </ul>
         </div>
@@ -549,19 +549,19 @@
     <div class="container">
       <ul id="menu-satelitennavigaton" class="bottom-nav">
         <li>
-          <a href="#">Контакты</a>
+          <a href="kontakt.html">Контакты</a>
         </li>
         <li>
-          <a href="#">Данные</a>
+          <a href="impressum.html">Данные</a>
         </li>
         <li>
-          <a href="#">Защита данных</a>
+          <a href="datenschutz.html">Защита данных</a>
         </li>
         <li>
-          <a href="#">Демо</a>
+          <a href="formpage-live-demo.html">Демо</a>
         </li>
         <li>
-          <a href="#">Магазин</a>
+          <a href="http://shop.ucontrol.de/">Магазин</a>
         </li>
       </ul>
     </div>
