--- a/energiemanagement.html
+++ b/energiemanagement.html
@@ -234,7 +234,7 @@
                           </div>
                           <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_0 et_pb_no_bg">
                             <div class="et_pb_promo_description"></div>
-                            <a class="et_pb_promo_button et_pb_button" href="#">Подробнее об экономии энергии</a>
+                            <a class="et_pb_promo_button et_pb_button" href="energie-sparen.html">Подробнее об экономии энергии</a>
                           </div>
                         </div>
                       </div>
@@ -535,10 +535,10 @@
               <a href="energysaving.html">Сэкономить на отоплении</a>
             </li>
             <li>
-              <a href="#">Правильно отопление</a>
+              <a href="richtig-heizen.html">Правильно отопление</a>
             </li>
             <li>
-              <a href="#">Интеллектуальное отопление</a>
+              <a href="intelligente-heizungssteuerung.html">Интеллектуальное отопление</a>
             </li>
           </ul>
         </div>
@@ -571,19 +571,19 @@
     <div class="container">
       <ul id="menu-satelitennavigaton" class="bottom-nav">
         <li>
-          <a href="#">Контакты</a>
+          <a href="kontakt.html">Контакты</a>
         </li>
         <li>
-          <a href="#">Данные</a>
+          <a href="impressum.html">Данные</a>
         </li>
         <li>
-          <a href="#">Защита данных</a>
+          <a href="datenschutz.html">Защита данных</a>
         </li>
         <li>
-          <a href="#">Демо</a>
+          <a href="formpage-live-demo.html">Демо</a>
         </li>
         <li>
-          <a href="#">Магазин</a>
+          <a href="http://shop.ucontrol.de/">Магазин</a>
         </li>
       </ul>
     </div>
