--- a/hotel-smart-home.html
+++ b/hotel-smart-home.html
@@ -284,9 +284,9 @@
                             <div class="et_pb_blurb_content">
                               <div class="et_pb_main_blurb_image"><span class="et-pb-icon et-waypoint et_pb_animation_top" style="color: #092545;">&#x4e;</span></div>
                               <div class="et_pb_blurb_container">
-                                <p>einfache <a href="/heizungssteuerung/installation/">Einführung</a>
+                                <p>einfache <a href="installation.html">Einführung</a>
                                   bzw.
-                                   <a href="/heizungssteuerung/nachruesten/">Nachrüstung</a></p>
+                                   <a href="upgrade.html">Nachrüstung</a></p>
                               </div>
                             </div>
                           </div>
@@ -337,7 +337,7 @@
                           <div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_text_6">
                             <h2>Kinderleichte Installation und Bedienung</h2>
                             <p>uControl erfordert kein spezielles Expertenwissen und ist leicht zu bedienen: In der einfachsten Variante ersetzen Sie im Zuge einer <a
-                              href="/heizungssteuerung/nachruesten/">Nachrüstung</a> lediglich Ihre alten Thermostate durch die von uns gelieferten Funkthermostate. Anschließend bitten Sie Ihren IT-Dienstleister, unser Funk-LAN-Gateway in das Hotelnetz zu integrieren. Auch die Bedienung erfordert kein Informatikstudium: Das in unserer Cloud gehostete uControl-Portal, das Sie über Ihren Browser erreichen, bildet die Struktur des Hotelgebäudes originalgetreu ab – mit Stockwerken, Seitenflügeln etc.</p>
+                              href="upgrade.html">Nachrüstung</a> lediglich Ihre alten Thermostate durch die von uns gelieferten Funkthermostate. Anschließend bitten Sie Ihren IT-Dienstleister, unser Funk-LAN-Gateway in das Hotelnetz zu integrieren. Auch die Bedienung erfordert kein Informatikstudium: Das in unserer Cloud gehostete uControl-Portal, das Sie über Ihren Browser erreichen, bildet die Struktur des Hotelgebäudes originalgetreu ab – mit Stockwerken, Seitenflügeln etc.</p>
                           </div>
                         </div>
                       </div>
@@ -606,10 +606,10 @@
               <a href="energysaving.html">Сэкономить на отоплении</a>
             </li>
             <li>
-              <a href="#">Правильно отопление</a>
+              <a href="richtig-heizen.html">Правильно отопление</a>
             </li>
             <li>
-              <a href="#">Интеллектуальное отопление</a>
+              <a href="intelligente-heizungssteuerung.html">Интеллектуальное отопление</a>
             </li>
           </ul>
         </div>
@@ -642,19 +642,19 @@
     <div class="container">
       <ul id="menu-satelitennavigaton" class="bottom-nav">
         <li>
-          <a href="#">Контакты</a>
+          <a href="kontakt.html">Контакты</a>
         </li>
         <li>
-          <a href="#">Данные</a>
+          <a href="impressum.html">Данные</a>
         </li>
         <li>
-          <a href="#">Защита данных</a>
+          <a href="datenschutz.html">Защита данных</a>
         </li>
         <li>
-          <a href="#">Демо</a>
+          <a href="formpage-live-demo.html">Демо</a>
         </li>
         <li>
-          <a href="#">Магазин</a>
+          <a href="http://shop.ucontrol.de/">Магазин</a>
         </li>
       </ul>
     </div>
