--- a/unternehmen.html
+++ b/unternehmen.html
@@ -222,7 +222,7 @@ id="ie8" lang="de-DE"> <![endif]-->
                     <img src="img/unternehmen.jpg" alt="" />
                   </div>
                   <div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_text_2">
-                    <p>Auf der <a href="http://123smartenergy.com/index.php/Produkte.html" target="_blank">Produktseite </a>können Sie sich schnell einen Überblick über die für Ihr Unternehmen passenden Lösungen verschaffen. Für eine individuelle Beratung senden Sie uns ganz einfach eine <a href="/kontakt">Nachricht</a>.</p>
+                    <p>Auf der <a href="http://123smartenergy.com/index.php/Produkte.html" target="_blank">Produktseite </a>können Sie sich schnell einen Überblick über die für Ihr Unternehmen passenden Lösungen verschaffen. Für eine individuelle Beratung senden Sie uns ganz einfach eine <a href="kontakt.html">Nachricht</a>.</p>
                   </div>
                 </div>
               </div>
@@ -237,7 +237,7 @@ id="ie8" lang="de-DE"> <![endif]-->
                   <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_center  et_pb_cta_0 et_pb_no_bg">
                     <div class="et_pb_promo_description">
                       <p>&nbsp;</p>
-                    </div> <a class="et_pb_promo_button et_pb_button" href="/anfragen">Fordern Sie noch heute Ihr individuelles Angebot an!</a> </div>
+                    </div> <a class="et_pb_promo_button et_pb_button" href="formpage.html">Fordern Sie noch heute Ihr individuelles Angebot an!</a> </div>
                 </div>
               </div>
             </div>
@@ -247,10 +247,10 @@ id="ie8" lang="de-DE"> <![endif]-->
                   <div class="et_pb_blurb et_pb_module et_pb_bg_layout_light et_pb_text_align_center IconLinkDark et_pb_blurb_0 et_pb_blurb_position_top">
                     <div class="et_pb_blurb_content">
                       <div class="et_pb_main_blurb_image">
-                        <a href="/heizungssteuerung/funktiosweise"><img src="img/funktionsweise-ucontrol-blau.png" alt="Funktionsweise uControl" class="et-waypoint et_pb_animation_off" /> </a>
+                        <a href="operation.html"><img src="img/funktionsweise-ucontrol-blau.png" alt="Funktionsweise uControl" class="et-waypoint et_pb_animation_off" /> </a>
                       </div>
                       <div class="et_pb_blurb_container">
-                        <p><a href="/heizungssteuerung/funktiosweise">Funktionsweise uControl</a> </p>
+                        <p><a href="operation.html">Funktionsweise uControl</a> </p>
                       </div>
                     </div>
                   </div>
@@ -259,11 +259,11 @@ id="ie8" lang="de-DE"> <![endif]-->
                   <div class="et_pb_blurb et_pb_module et_pb_bg_layout_light et_pb_text_align_center IconLinkDark et_pb_blurb_1 et_pb_blurb_position_top">
                     <div class="et_pb_blurb_content">
                       <div class="et_pb_main_blurb_image">
-                        <a href="/heizungssteuerung/nachruesten">
+                        <a href="upgrade.html">
                           <img src="img/ucontrol-an-ihrer-heizung-blau.png" alt="uControl an Ihrer Heizung nachrüsten" class="et-waypoint et_pb_animation_off" /> </a>
                       </div>
                       <div class="et_pb_blurb_container">
-                        <p><a href="/heizungssteuerung/nachruesten">So einfach rüsten Sie uControl an Ihrer Heizung nach</a> </p>
+                        <p><a href="upgrade.html">So einfach rüsten Sie uControl an Ihrer Heizung nach</a> </p>
                       </div>
                     </div>
                   </div>
@@ -272,11 +272,11 @@ id="ie8" lang="de-DE"> <![endif]-->
                   <div class="et_pb_blurb et_pb_module et_pb_bg_layout_light et_pb_text_align_center IconLinkDark et_pb_blurb_2 et_pb_blurb_position_top">
                     <div class="et_pb_blurb_content">
                       <div class="et_pb_main_blurb_image">
-                        <a href="/einsatzgebiete-heizungssteuerung/hotel-smart-home">
+                        <a href="hotel-smart-home.html">
                           <img src="img/heizungssteuerung-im-hotel-blau.png" alt="Heizungssteuerung im Hotel" class="et-waypoint et_pb_animation_off" /> </a>
                       </div>
                       <div class="et_pb_blurb_container">
-                        <p><a href="/einsatzgebiete-heizungssteuerung/hotel-smart-home">Nutzen Sie eine Heizungssteuerung im Hotel</a> </p>
+                        <p><a href="hotel-smart-home.html">Nutzen Sie eine Heizungssteuerung im Hotel</a> </p>
                       </div>
                     </div>
                   </div>
@@ -285,11 +285,11 @@ id="ie8" lang="de-DE"> <![endif]-->
                   <div class="et_pb_blurb et_pb_module et_pb_bg_layout_light et_pb_text_align_center IconLinkDark et_pb_blurb_3 et_pb_blurb_position_top">
                     <div class="et_pb_blurb_content">
                       <div class="et_pb_main_blurb_image">
-                        <a href="/einsatzgebiete-heizungssteuerung/energiesparen-buero">
+                        <a href="energysaving.html">
                           <img src="img/heizungssteuerung-im-unternehmen-blau.png" alt="uControl im Unternehmen" class="et-waypoint et_pb_animation_off" /> </a>
                       </div>
                       <div class="et_pb_blurb_container">
-                        <p><a href="/einsatzgebiete-heizungssteuerung/energiesparen-buero">Wie heizen Sie richtig im Unternehmen?</a> </p>
+                        <p><a href="energysaving.html">Wie heizen Sie richtig im Unternehmen?</a> </p>
                       </div>
                     </div>
                   </div>
@@ -354,10 +354,10 @@ id="ie8" lang="de-DE"> <![endif]-->
               <a href="energysaving.html">Сэкономить на отоплении</a>
             </li>
             <li>
-              <a href="#">Правильно отопление</a>
+              <a href="richtig-heizen.html">Правильно отопление</a>
             </li>
             <li>
-              <a href="#">Интеллектуальное отопление</a>
+              <a href="intelligente-heizungssteuerung.html">Интеллектуальное отопление</a>
             </li>
           </ul>
         </div>
@@ -390,19 +390,19 @@ id="ie8" lang="de-DE"> <![endif]-->
     <div class="container">
       <ul id="menu-satelitennavigaton" class="bottom-nav">
         <li>
-          <a href="#">Контакты</a>
+          <a href="kontakt.html">Контакты</a>
         </li>
         <li>
-          <a href="#">Данные</a>
+          <a href="impressum.html">Данные</a>
         </li>
         <li>
-          <a href="#">Защита данных</a>
+          <a href="datenschutz.html">Защита данных</a>
         </li>
         <li>
-          <a href="#">Демо</a>
+          <a href="formpage-live-demo.html">Демо</a>
         </li>
         <li>
-          <a href="#">Магазин</a>
+          <a href="http://shop.ucontrol.de/">Магазин</a>
         </li>
       </ul>
     </div>
