--- a/wohnheime-und-pflegeheime.html
+++ b/wohnheime-und-pflegeheime.html
@@ -218,12 +218,12 @@
               <div class=" et_pb_row et_pb_row_1">
                 <div class="et_pb_column et_pb_column_1_2 et_pb_column_2">
                   <div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_text_1">
-                    <p>Mit uControl wird die unter dem Label „<a href="/heizungssteuerung/smart-home/">Smart Home</a>“ bekannte Haustechnik endlich auch für Wohnheime interessant. Die Multi-Gateway-Technologie erlaubt die Regelung sämtlicher Heizkörper eines Gebäudes mit einer komfortablen Online-Steuerung über PC, Tablet-PC oder auch Smartphone-App – für eine beliebig große Anzahl von Räumen.</p>
+                    <p>Mit uControl wird die unter dem Label „<a href="smarthome.html">Smart Home</a>“ bekannte Haustechnik endlich auch für Wohnheime interessant. Die Multi-Gateway-Technologie erlaubt die Regelung sämtlicher Heizkörper eines Gebäudes mit einer komfortablen Online-Steuerung über PC, Tablet-PC oder auch Smartphone-App – für eine beliebig große Anzahl von Räumen.</p>
                   </div>
                 </div>
                 <div class="et_pb_column et_pb_column_1_2 et_pb_column_3">
                   <div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_text_2">
-                    <p>Die <a href="/heizungssteuerung/installation/">Einführung</a> oder <a href="/unternehmen/nachrichten/">Nachrüstung</a> der Lösung gestaltet sich extrem einfach. Zudem ist sie flexibel erweiterbar und amortisiert sich binnen ein bis zwei Jahren.</p>
+                    <p>Die <a href="installation.html">Einführung</a> oder <a href="nachrichten.html">Nachrüstung</a> der Lösung gestaltet sich extrem einfach. Zudem ist sie flexibel erweiterbar und amortisiert sich binnen ein bis zwei Jahren.</p>
                   </div>
                 </div>
               </div>
@@ -585,7 +585,7 @@ id="ninja_forms_field_12_2" name="ninja_forms_field_12" type="radio" class="ninj
           </div>
         </article>
       </div>
-      
+
 <!-- start footer.html-->
 <footer id="main-footer">
   <div class="container">
@@ -640,10 +640,10 @@ id="ninja_forms_field_12_2" name="ninja_forms_field_12" type="radio" class="ninj
               <a href="energysaving.html">Сэкономить на отоплении</a>
             </li>
             <li>
-              <a href="#">Правильно отопление</a>
+              <a href="richtig-heizen.html">Правильно отопление</a>
             </li>
             <li>
-              <a href="#">Интеллектуальное отопление</a>
+              <a href="intelligente-heizungssteuerung.html">Интеллектуальное отопление</a>
             </li>
           </ul>
         </div>
@@ -676,19 +676,19 @@ id="ninja_forms_field_12_2" name="ninja_forms_field_12" type="radio" class="ninj
     <div class="container">
       <ul id="menu-satelitennavigaton" class="bottom-nav">
         <li>
-          <a href="#">Контакты</a>
+          <a href="kontakt.html">Контакты</a>
         </li>
         <li>
-          <a href="#">Данные</a>
+          <a href="impressum.html">Данные</a>
         </li>
         <li>
-          <a href="#">Защита данных</a>
+          <a href="datenschutz.html">Защита данных</a>
         </li>
         <li>
-          <a href="#">Демо</a>
+          <a href="formpage-live-demo.html">Демо</a>
         </li>
         <li>
-          <a href="#">Магазин</a>
+          <a href="http://shop.ucontrol.de/">Магазин</a>
         </li>
       </ul>
     </div>
