--- a/app/html/operation.html
+++ b/app/html/operation.html
@@ -41,10 +41,10 @@ id="ie8" lang="de-DE"> <![endif]-->
                                         <h1>Принцип работы uControl: вы управляете отоплением помещений эффективно и комфортно.</h1>
                                         <p>
                                             Система экономии энергии uControl состоит из двух компонентов: портала uControl, с помощью которого вы можете детализированно управлять вашей отопительной системой и
-                                            <a href="#"></a> аппаратной части с беспроводным локальным шлюзом в качестве интерфейса, а также целым рядом преобразователей и сенсоров, взаимодействующих друг с другом при помощи радиосвязи.</p>
+                                            <a href="devicehardware.html">аппаратной части</a> с беспроводным локальным шлюзом в качестве интерфейса, а также целым рядом преобразователей и сенсоров, взаимодействующих друг с другом при помощи радиосвязи.</p>
                                         <p>Принципиально решение функционирует точно так же, как уже применяемые системы «умного дома» в жилых помещениях. Однако решение имеет целый ряд дополнительных возможностей, которые востребованы, прежде всего, в производственной сфере: вы можете, например, управлять несколькими шлюзами через один аккаунт и таким образом регулировать и оптимизировать обогрев до 500 помещений в различных строениях.Особое преимущество дает простота установки оборудования:
-                                            <a href="#"></a>
-                                            <a href="#"></a> для внедрения или модернизации uControl не требуются ни специальные знания, ни строительные работы. .</p>
+
+                                            <a href="installation.html">для внедрения</a> или   <a href="upgrade.html">модернизации</a> uControl не требуются ни специальные знания, ни строительные работы. .</p>
                                     </div>
                                 </div>
                             </div>
