--- a/heatingcontrol.html
+++ b/heatingcontrol.html
@@ -59,7 +59,7 @@ id="ie8" lang="de-DE"> <![endif]-->
 			<div class="container clearfix et_menu_container">
 				<div class="logo_container">
 					<span class="logo_helper"></span>
-					<a href="/">
+					<a href="/ucontrol">
 						<img data-actual-height="86" data-actual-width="226" src="img/logo-ucontrol.gif" alt="uControl" id="logo" data-height-percentage="55">
 					</a>
 				</div>
@@ -205,7 +205,7 @@ id="ie8" lang="de-DE"> <![endif]-->
                                     </div>
                                     <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_0 et_pb_no_bg">
                                         <div class="et_pb_promo_description"></div>
-                                        <a class="et_pb_promo_button et_pb_button" href="#">Подайте заявку на индивидуальное предложение уже сегодня! </a>
+                                        <a class="et_pb_promo_button et_pb_button" href="formpage.html">Подайте заявку на индивидуальное предложение уже сегодня! </a>
                                     </div>
                                 </div>
                             </div>
@@ -234,7 +234,7 @@ id="ie8" lang="de-DE"> <![endif]-->
                                     <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_1 et_pb_no_bg">
                                         <div class="et_pb_promo_description">
                                             <p>&nbsp;</p>
-                                        </div> <a class="et_pb_promo_button et_pb_button" href="#">К принципу работы</a>
+                                        </div> <a class="et_pb_promo_button et_pb_button" href="operation.html">К принципу работы</a>
                                     </div>
                                 </div>
                                 <div class="et_pb_column et_pb_column_1_2 et_pb_column_5">
@@ -256,7 +256,7 @@ id="ie8" lang="de-DE"> <![endif]-->
                                     </div>
                                     <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_2 et_pb_no_bg">
                                         <div class="et_pb_promo_description"></div>
-                                        <a class="et_pb_promo_button et_pb_button" href="#">ZК внедрению управления обогревом</a>
+                                        <a class="et_pb_promo_button et_pb_button" href="installation.html">ZК внедрению управления обогревом</a>
                                     </div>
                                 </div>
                             </div>
@@ -270,7 +270,7 @@ id="ie8" lang="de-DE"> <![endif]-->
                                     </div>
                                     <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_3 et_pb_no_bg">
                                         <div class="et_pb_promo_description"></div>
-                                        <a class="et_pb_promo_button et_pb_button" href="#">Модернизировать систему управления обогревом</a>
+                                        <a class="et_pb_promo_button et_pb_button" href="upgrade.html">Модернизировать систему управления обогревом</a>
                                     </div>
                                 </div>
                                 <div class="et_pb_column et_pb_column_1_2 et_pb_column_9">
@@ -288,7 +288,7 @@ id="ie8" lang="de-DE"> <![endif]-->
                                     </div>
                                     <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_center  et_pb_cta_4 et_pb_no_bg">
                                         <div class="et_pb_promo_description"></div>
-                                        <a class="et_pb_promo_button et_pb_button" href="#">Закажите уже сегодня ваше индивидуальное предложение!</a>
+                                        <a class="et_pb_promo_button et_pb_button" href="formpage.html">Закажите уже сегодня ваше индивидуальное предложение!</a>
                                     </div>
                                 </div>
                             </div>
@@ -306,7 +306,7 @@ id="ie8" lang="de-DE"> <![endif]-->
                                     </div>
                                     <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_center  et_pb_cta_5 et_pb_no_bg">
                                         <div class="et_pb_promo_description"></div>
-                                        <a class="et_pb_promo_button et_pb_button" href="#">Узнать о наших устройствах и оборудовании</a>
+                                        <a class="et_pb_promo_button et_pb_button" href="devicehardware.html">Узнать о наших устройствах и оборудовании</a>
                                     </div>
                                 </div>
                                 <div class="et_pb_column et_pb_column_1_2 et_pb_column_12">
@@ -320,7 +320,7 @@ id="ie8" lang="de-DE"> <![endif]-->
                                     </div>
                                     <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_center  et_pb_cta_6 et_pb_no_bg">
                                         <div class="et_pb_promo_description"></div>
-                                        <a class="et_pb_promo_button et_pb_button" href="#">Больше энергии для управления</a>
+                                        <a class="et_pb_promo_button et_pb_button" href="energiemanagement.html">Больше энергии для управления</a>
                                     </div>
                                 </div>
                             </div>
