--- a/unternehmen.html
+++ b/unternehmen.html
@@ -66,7 +66,7 @@ id="ie8" lang="de-DE"> <![endif]-->
 			<div class="container clearfix et_menu_container">
 				<div class="logo_container">
 					<span class="logo_helper"></span>
-					<a href="/">
+					<a href="/ucontrol">
 						<img data-actual-height="86" data-actual-width="226" src="img/logo-ucontrol.gif" alt="uControl" id="logo" data-height-percentage="55">
 					</a>
 				</div>
